# scheduling-app

./: .coverage  .flake8  LICENSE  mypy.ini  noxfile.py  pyproject.toml
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _thread.data.json  _thread.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  copy.data.json  copy.meta.json  dataclasses.data.json  dataclasses.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  functools.data.json  functools.meta.json  hashlib.data.json  hashlib.meta.json  io.data.json  io.meta.json  itertools.data.json  itertools.meta.json  mmap.data.json  mmap.meta.json  noxfile.data.json  noxfile.meta.json  platform.data.json  platform.meta.json  posix.data.json  posix.meta.json  (+26 more)
.mypy_cache/3.8/click/: __init__.data.json  __init__.meta.json  _termui_impl.data.json  _termui_impl.meta.json  core.data.json  core.meta.json  decorators.data.json  decorators.meta.json  exceptions.data.json  exceptions.meta.json  formatting.data.json  formatting.meta.json  globals.data.json  globals.meta.json  parser.data.json  parser.meta.json  termui.data.json  termui.meta.json  testing.data.json  testing.meta.json  types.data.json  types.meta.json  utils.data.json  utils.meta.json
.mypy_cache/3.8/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/distutils/: __init__.data.json  __init__.meta.json  version.data.json  version.meta.json
.mypy_cache/3.8/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json
.mypy_cache/3.8/json/: __init__.data.json  (+5 more)
.nox/lint-3-8/: pyvenv.cfg
.pytype/: .ninja_log  build.ninja
.pytype/imports/: scheduling_app.get_schedule.imports  tests.test_month.imports
.pytype/pyi/: noxfile.pyi
src/scheduling_app/: __init__.py  entities.py  generate_workshifts.py  get_schedule.py
src/scheduling_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_data/: business.csv  workshifts.pkl
tests/: __init__.py  test_month.py
(+49 files in other folders)
