[tool.poetry]
name = "scheduling_app"
version = "0.1.0"
description = "A scheduling app that can be used to generate schedules for people on workplaces."
authors = ["Per Edwardsson <per@peredwardsson.se>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
