[tool.poetry]
name = "scheduling_app"
version = "0.1.0"
description = "A scheduling app that can be used to generate schedules for people on workplaces."
authors = ["Per Edwardsson <per@peredwardsson.se>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
numpy = "^1.18.4"
pytest-cov = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"

[tool.poetry.scripts]
schedules = "scheduling_app.get_schedule:main"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["scheduling_app"]

[tool.coverage.report]
show_missing = true