[tool.poetry]
name = "scheduling_app"
version = "0.1.0"
description = "A scheduling app that can be used to generate schedules for people on workplaces."
authors = ["Per Edwardsson <per@peredwardsson.se>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
numpy = "^1.18.4"
pytest-cov = "^2.9.0"
desert = "^2020.1.6"
marshmallow = "^3.6.0"
pandas = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
black = "^19.10b0"
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
pytest-mock = "^3.1.0"
mypy = "^0.770"
typeguard = "^2.7.1"
flake8-annotations = "^2.1.0"
pytype = {version = "^2020.6.26", python = "3.8"}
flake8-docstrings = "^1.5.0"

[tool.poetry.scripts]
scheduling-app = "scheduling_app.get_schedule:main"
workshift = "scheduling_app.generate_workshifts:generate"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["scheduling_app"]

[tool.coverage.report]
show_missing = true
